[tool.poetry]
name = "keepem"
version = "0.1.0"
description = "Keepem backends "
authors = ["Marti <marti@keepem.app>"]
license = "Coppyright Keepem"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.70.1"
uvicorn = "0.15.0"
pymongo = "4.0.1"
fastapi-pagination = "0.9.1"
python-dotenv = "0.19.2"
pydantic = {version = "1.9.0", extras = ["email", "dotenv"]}
python-multipart = "0.0.5"
aiofiles = "0.8.0"
jinja2 = "3.0.3"
python-jose = {version = '3.3.0', extras = ["cryptography"]}
bcrypt = "3.2.0"
flatdict = "4.0.1"
gitpython = "3.1.24"
pyinstrument = "4.1.1"
setuptools-rust = "1.1.2"
passlib = "1.7.4"
boto3 = "1.20.24"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
